# thesis-review-system

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/groups/: models.py  serializers.py  urls.py  utils.py  views.py
backend/groups/migrations/: 0001_initial.py  0002_auto_20200705_1905.py
backend/thesis/: models.py
backend/users/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  0002_auto_20200704_0408.py
config/: settings.py  urls.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  Routes.ts  Store.ts  index.css  index.tsx  react-app-env.d.ts
static/css/: login.css  main.css
static/js/: navbar.js  upload.js
templates/: base.html
templates/admin/: result_change_list.html  student_change_list.html
templates/base/: base.html  base_hero.html  thesis_dashboard_base.html
templates/include/: comment_item.html  document_list_tab.html  logbook_list.html  messages.html  navbar.html  no_documents.html  no_logbooks.html
templates/registration/: about.html  change_password.html  home.html  login.html  register.html  result-report-pdf.html  student_detail.html  teacher_detail.html  teacher_list.html  user_create.html  user_delete.html  user_update.html
templates/thesis/: create-mark.html  create_studentgroup.html  document_list.html  document_upload.html  group_approve.html  group_create.html  group_create_join.html  group_home.html  group_invite.html  (+11 more)
(+80 files in other folders)
