[tool.poetry]
name = "thesis-review-system"
version = "0.0.1"
description = "Thesis Review System for convenience between supervisors and students"
authors = ["Shakib Hossain <shakib609@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
djangorestframework = "^3.11.0"
mysqlclient = "^2.0.0"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
